--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/Himalayan Logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/Logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Himalayan Edu Group Service Pvt. Ltd.</title>
   </head>
