--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Preconnect to Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Preconnect to EmailJS (if you use it) -->
+    <link rel="preconnect" href="https://api.emailjs.com" crossorigin />
+
+    <!-- Regular meta and title tags below -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/Logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Himalayan Edu Group Service Pvt. Ltd.</title>
+    <title>Himalayan Educational Group Service Pvt. Ltd.</title>
   </head>
   <body>
     <div id="root"></div>
