--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Himalayan Educational Group Service Pvt. Ltd.</title>
+    <link rel="icon" type="image/x-icon" href="/Logo.webp" />
   </head>
   <body>
     <div id="root"></div>
